--- a/theme.toml
+++ b/theme.toml
@@ -15,3 +15,209 @@ homepage = "https://github.com/zhheo"
 repo = "https://github.com/zhheo/HeoWeb"
 
 [extra]
+
+[extra.site]
+start_year = 2024
+logo = "/img/logo.webp"
+# default to use logo value
+nav_logo = "/img/logo.webp"
+# 联系邮箱
+mail = "contact@example.com"
+# ICP 备案号
+compliance_icp = "ICP备XXXXXXXX号"
+# 公安备案号
+compliance_security = "公网安备0000000000号"
+# 公安备案链接
+compliance_security_link = "https://www.beian.gov.cn/portal/registerSystemInfo?recordcode=0000000000"
+
+
+# umami 访问量统计
+[extra.analytics.umami]
+enable = false
+# 生效的域名，避免被 localhost 统计
+domain = "example.com"
+# 自己的umami服务地址
+remote_url = "https://umami-api"
+#remote_url = "https://umami-wangjiaxiang-d12g.netlify.app"
+# 网站id
+id = "5c123448-a501-444c-830a-e55df930cd4a"
+# js 加载地址
+js = "/path/to/script.js"
+
+[extra.nav]
+
+[extra.nav.message]
+enable = true
+# support inline html
+text = "🎉 访问作者博客"
+url = "https://blog.jiaxiang.wang"
+
+[extra.nav.center]
+menus = [
+    { name = "主页", url = "主页", internal = true},
+    { name = "主题", url = "主题", internal = true},
+    { name = "博客", url = "博客", internal = true},
+    { name = "媒体", url = "媒体", internal = true},
+    { name = "项目", url = "https://blog.jiaxiang.wang/tags/project/", internal = false},
+]
+
+[extra.nav.right]
+menus = [
+    { name = "作者博客", url = "https://blog.jiaxiang.wang", internal = false},
+    { name = "作者 Github", url = "https://github.com/iWangJiaxiang", internal = false},
+]
+
+
+# 主页小组件 按顺序渲染
+[[extra.index.widgets]]
+type = "header"
+[extra.index.widgets.value]
+title_1 = "王嘉祥"
+title_2 = "Jiaxiang Wang"
+bio_1 = "专注于科技、音乐等领域<span class=\"inline-word\">跨界创新</span>"
+bio_2 = "分享经验与见解"
+about_url = "https://blog.jiaxiang.wang/about/"
+cover = "/img/logo.svg"
+[[extra.index.widgets.value.links]]
+class_icon = " icon-github-line"
+url = "https://github.com/iWangJiaxiang"
+[[extra.index.widgets.value.links]]
+class_icon = " icon-github-line"
+url = "https://github.com/iWangJiaxiang"
+
+
+[[extra.index.widgets]]
+type = "author"
+[extra.index.widgets.value]
+name = "王嘉祥"
+avatar = "/img/logo01.webp"
+title = "Team leader, architect,"
+# title = "Team leader, architect, senior engineer, singer songwriter, creator. Engaging in HPC, Cloud, AI and more."
+bio = "“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”“专注于科技、音乐等领域跨界创新，分享经验与见解”"
+
+
+[[extra.index.widgets]]
+type = "product-single"
+[extra.index.widgets.value]
+tip = "主页"
+title = "个人主页<br>正式开源"
+bio_1 = "像本页面一样，呈现美轮美奂<span class=\"inline-word\">效果</span>"
+bio_2 = "轻松配置，快速构建你的<span class=\"inline-word\">个人主页</span>"
+img = "/img/homepage-single.avif"
+[[extra.index.widgets.value.links]]
+class = "primary-button"
+url = "https://github.com/iWangJiaxiang/Homepage-Creators"
+name = "立刻获取源代码"
+[[extra.index.widgets.value.links]]
+class = "second-link"
+url = "https://github.com/iWangJiaxiang"
+name = "开发者主页"
+
+
+[[extra.index.widgets]]
+type = "event"
+[extra.index.widgets.value]
+tip = "大事件"
+title = "王嘉祥博客主题<br>正式开源！"
+bio = "一个为创作者而构建的主题，0成本、0运维开始你的博客生涯，与各位优秀博主一同进步！"
+button = "立刻获取源代码"
+note = "基于 Zola 构建"
+url = "https://github.com/iWangJiaxiang/zola-theme-jiaxiang.wang"
+img = "/img/blog-event.avif"
+
+
+[[extra.index.widgets]]
+type = "product-single"
+[extra.index.widgets.value]
+tip = "博客"
+title = "新奇的事物<br>有趣的思想"
+bio_1 = "备受喜爱的知识共享<span class=\"inline-word\">博客</span>"
+bio_2 = "已帮助数百万互联网使用者更好的探索数字<span class=\"inline-word\">世界</span>"
+img = "/img/blog.avif"
+style = "background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);"
+[[extra.index.widgets.value.links]]
+class = "primary-button"
+url = "https://blog.jiaxiang.wang/"
+name = "访问博客"
+[[extra.index.widgets.value.links]]
+class = "second-link"
+url = "https://blog.jiaxiang.wang/articles/misc/from-0-to-1-the-blog-review/"
+name = "创站故事"
+
+
+[[extra.index.widgets]]
+type = "product-list"
+[extra.index.widgets.value]
+title = "媒体"
+bio = "为互联网共享精神添砖加瓦"
+[[extra.index.widgets.value.items]]
+logo = "/img/internet.svg"
+title = "个人博客"
+bio = "专注于科技、音乐等领域跨界创新，分享经验与见解"
+url = "https://blog.jiaxiang.wang/"
+button = "访问"
+[[extra.index.widgets.value.items]]
+logo = "/img/afdian.png"
+title = "爱发电"
+bio = "分享有趣又有料的文章与资源"
+url = "https://afdian.com/a/wangjiaxiang"
+button = "访问"
+note = "订阅制"
+new = true
+[[extra.index.widgets.value.items]]
+logo = "/img/wechat.svg"
+title = "公众号"
+bio = "第一时间获取动态"
+url = "https://blog.jiaxiang.wang/wechat"
+button = "访问"
+hot = true
+[[extra.index.widgets.value.items]]
+logo = "/img/follow.svg"
+title = "Follow"
+bio = "一站式获取文章订阅"
+url = "https://app.follow.is/share/feeds/89889813571729408"
+button = "访问"
+new = true
+
+
+[[extra.index.widgets]]
+type = "product-single"
+[extra.index.widgets.value]
+tip = "主题"
+title = "博客主题<br>开源共享"
+bio_1 = "0成本0运维搭建属于你的<span class=\"inline-word\">博客站点</span>"
+bio_2 = "进入创作分享的<span class=\"inline-word\">博客世界</span>"
+img = "/img/theme-single.avif"
+style = "background-image: linear-gradient(180deg, #0F6AC1 0%, #002EA0 100%);"
+style_tip = "color: white; opacity: 0.6;"
+[[extra.index.widgets.value.links]]
+class = "primary-button"
+url = "https://github.com/iWangJiaxiang/zola-theme-jiaxiang.wang"
+name = "访问项目"
+[[extra.index.widgets.value.links]]
+class = "second-link"
+url = "https://theme.jiaxiang.wang/"
+name = "访问演示站点"
+
+
+[[extra.index.widgets]]
+type = "product-list"
+[extra.index.widgets.value]
+title = "主题"
+bio = "帮助更多用户构建出非凡的网站"
+[[extra.index.widgets.value.items]]
+logo = "/img/internet.svg"
+title = "Jiaiang.Wang"
+bio = "纯静态个人博客主题 (Zola)"
+url = "https://github.com/iWangJiaxiang/zola-theme-jiaxiang.wang"
+button = "访问"
+note = "本人博客主题"
+hot = true
+[[extra.index.widgets.value.items]]
+logo = "/img/internet.svg"
+title = "Homepage Creators"
+bio = "纯静态个人主页主题 (Zola)"
+url = "https://github.com/iWangJiaxiang/Homepage-Creators"
+button = "访问"
+note = "本站主题"
+new = true
