--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,8 +4,8 @@
     "icons": [
       {
         "src": "/img/logo.webp",
-        "type": "image/webp",
-        "sizes": "192x192"
+        "type": "image/png",
+        "sizes": "96x96"
       }
     ],
     "start_url": "/",
