💚 Fix push permission

--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build-gh-pages:
+    permissions:
+      contents: write    
     name: Build and Deploy
     runs-on: ubuntu-24.04
     if: github.ref == 'refs/heads/main'
